--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,10 +5,26 @@
 }
 <link rel="stylesheet" href="~/Sheets/Sheet.css">
 
-<section id="index-section" class="text-white py-5">
+<section id="principal-section" class="text-white py-5">
 
 <div class="text-center">
     <h1 class="Principal-text">Welcome</h1>
-    <p>Cars and more</a>.</p>
+    <p class=Text> Cars and more  </p>
+</div>
 
 </section>
+
+<section id="Prologue" class="text-white-50">
+<div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-6">
+            </div>
+            <div class="col-lg-6">
+                <h2 class="font-weight-light">Discover Our Car Collection</h2>
+                <p>Explore a wide range of vehicles, from classic models to the latest releases. Whether you're a car enthusiast or just looking for your next ride, we have something for everyone.</p>
+                <p>Join us on a journey through the world of automobiles and find the perfect car that suits your style and needs.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
