Refactor Vehicle class and update client creation page
Commented out the Vehicle class in Vehicle.cs, removing data annotations.
Added necessary namespaces and implemented CreateClientModel in ClientCreate.cshtml.cs
to handle client data. Removed styles from Sheet.css and restored them in site.css.

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -20,3 +20,19 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+#principal-section {
+    background-image: url('../Images/Brend-Cars.png');
+    background-size: cover;
+}
+
+h1.Principal-text {
+    color: black;
+    background-color: rgba(255, 255, 255, 0.7);
+    display: inline-block;
+}
+
+p.Text {
+    color: black;
+}
+
