--- a/Pages/Clients/EditClient.cshtml
+++ b/Pages/Clients/EditClient.cshtml
@@ -1,9 +1,11 @@
 ﻿@page
-@model AutomotiveMB.Pages.Client.EditClientModel
+@model AutomotiveMB.Pages.ClientCreate.EditClientModel
 @{
 }
 
 <form method="post">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
     <input type="hidden" asp-for="Client.Id" />
     <input type="hidden" asp-for="Client.Dni" />
     <input type="hidden" asp-for="Client.FechaNacimiento" />
