--- a/Pages/Clients/IndexClient.cshtml
+++ b/Pages/Clients/IndexClient.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
-@model AutomotiveMB.Pages.Client.IndexModel
+@model AutomotiveMB.Pages.ClientCreate.IndexClientModel
 @{
     ViewData["Title"] = "Clients";
 }
 
 <a asp-page="CreateClient" class="btn btn-success mb-3">Add Client</a>
-@if (Model.Client.Count == 0)
+@if (Model.Clients.Count == 0)
 {
     <p>no clients loaded</p>
 }
@@ -25,16 +25,16 @@ else
             </tr>
         </thead>
         <tbody>
-            @foreach (var client in Model.Client)
+            @foreach (var client in Model.Clients)
             {
                 <tr>
                     <td>@client.Id</td>
-                    <td>@client.Name</td>
-                    <td>@client.Lastname</td>
-                    <td>@client.BirthDate.ToShortDateString()</td>
+                    <td>@client.Nombre</td>
+                    <td>@client.Apellido</td>
+                    <td>@client.FechaNacimiento</td>
                     <td>@client.Dni</td>
                     <td>@client.Email</td>
-                    <td>@client.PhoneNumber</td>
+                    <td>@client.Telefono</td>
                     <td>
                         <a asp-page="EditClient" asp-route-id="@client.Id" class="btn btn-primary btn-sm">Edit</a>
                         <a asp-page="DeleteClient" asp-route-id="@client.Id" class="btn btn-danger btn-sm">Delete</a>
