--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -3,9 +3,17 @@
 @{
     ViewData["Title"] = "Home page";
 }
-<link rel="stylesheet" href="~/Sheets/Sheet.css">
+<!DOCTYPE html>
+<html Lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=divice-width, initial-scale=1.0">
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true">
+    <title>AutomotiveMB</title>
+</head>
+<body class="Body">
 
-<section id="principal-section" class="text-white py-5">
+<section id="principal-section">
 
 <div class="text-center">
     <h1 class="Principal-text">Welcome</h1>
@@ -14,17 +22,13 @@
 
 </section>
 
-<section id="Prologue" class="text-white-50">
-<div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-6">
-            </div>
-            <div class="col-lg-6">
-                <h2 class="font-weight-light">Discover Our Car Collection</h2>
-                <p>Explore a wide range of vehicles, from classic models to the latest releases. Whether you're a car enthusiast or just looking for your next ride, we have something for everyone.</p>
-                <p>Join us on a journey through the world of automobiles and find the perfect car that suits your style and needs.</p>
-            </div>
-        </div>
+<section id="Prologue">
+    <div id="Subtext">
+
+        <h2 id="Title2">Discover Our Car Collection</h2>
+        <p>Explore a wide range of vehicles, from classic models to the latest releases. Whether you're a car enthusiast or just looking for your next ride, we have something for everyone.</p>
+        <p>Join us on a journey through the world of automobiles and find the perfect car that suits your style and needs.</p>
     </div>
 </section>
-
+</body>
+</html>
