--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -21,7 +21,7 @@ body {
   margin-bottom: 60px;
 }
 
-#principal-section {
+.Body {
     background-image: url('../Images/Brend-Cars.png');
     background-size: cover;
 }
@@ -36,3 +36,8 @@ p.Text {
     color: black;
 }
 
+.Subtext {
+    color: black;
+    background-color: rgba(255, 255, 255, 0.7);
+    display: inline-block;
+}
