--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -15,7 +15,7 @@
 
 <section id="principal-section">
 
-<div class="text-center">
+<div id="text-center">
     <h1 class="Principal-text">Welcome</h1>
     <p class=Text> Cars and more  </p>
 </div>
