--- a/Pages/Clients/IndexClient.cshtml
+++ b/Pages/Clients/IndexClient.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Clients";
 }
 
-<a asp-page="CreateClient" class="btn btn-success mb-3">Add Client</a>
+<a asp-page="ClientCreate" class="btn btn-success mb-3">Add Client</a>
 @if (Model.Clients.Count == 0)
 {
     <p>no clients loaded</p>
