--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
+        <div id ="footerP" class="container">
             &copy; 2025 - AutomotiveMB - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
