--- a/Pages/Clients/IndexClient.cshtml
+++ b/Pages/Clients/IndexClient.cshtml
@@ -7,7 +7,7 @@
 <a asp-page="ClientCreate" class="btn btn-success mb-3">Add Client</a>
 @if (Model.Clients.Count == 0)
 {
-    <p>no clients loaded</p>
+    <p>No clients are loaded</p>
 }
 else
 {
@@ -31,7 +31,7 @@ else
                     <td>@client.Id</td>
                     <td>@client.Nombre</td>
                     <td>@client.Apellido</td>
-                    <td>@client.FechaNacimiento</td>
+                    <td>@client.FechaNacimiento?.ToString("dd/MM/yyyy")</td>
                     <td>@client.Dni</td>
                     <td>@client.Email</td>
                     <td>@client.Telefono</td>
