--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -41,6 +41,8 @@
                 <button class="car-card" data-info="Ford Explorer – An iconic mid-size SUV offering seating for up to seven passengers, strong performance, and versatility for both family trips and adventure.">
                     <img src="~/images/car3.jpg" alt="Ford Explorer">
                 </button>
+            <button class="car-card" data-info="Mercedes Benz B200 – The Mercedes-Benz B200 is a compact luxury MPV that blends practicality with premium features, ideal for urban families and tech-savvy drivers.">
+                <img src="~/images/car4.jpg" alt="Mercedes Benz B200">
             </div>
         </section>
 
