--- a/Pages/Clients/DeleteClient.cshtml
+++ b/Pages/Clients/DeleteClient.cshtml
@@ -34,5 +34,5 @@
 
     <br />
     <button type="submit" class="btn btn-danger">Delete</button>
-    <a asp-page="Index" class="btn btn-secondary">Cancel</a>
+    <a asp-page="IndexClient" class="btn btn-secondary">Cancel</a>
 </form>
