--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -53,5 +53,31 @@
             <div id="popup-text"></div>
         </div>
 </section>
+
+
+<!-- Contacto -->
+<section class="py-5 bg-light" id="contact">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-md-6"><img id="Logo" src="~/Images/Logo.png" class="img-fluid" alt="Logo"></div>
+            <div class="col-md-6">
+                <h4>Contact Us</h4>
+                <form onsubmit="sendEmail(); return false;" class="mt-3">
+                    <div class="mb-3">
+                        <input type="text" id="name" class="form-control" placeholder="Name">
+                    </div>
+                    <div class="mb-3">
+                        <input type="email" id="email" class="form-control" placeholder="E-Mail">
+                    </div>
+                    <div class="mb-3">
+                        <textarea id="message" class="form-control" placeholder="Write a massage" rows="5"></textarea>
+                    </div>
+                    <button type="submit" class="btn sm">Send</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+
 </html>
 <script src="~/js/site.js" asp-append-version="true"></script>
