--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -29,7 +29,7 @@
         <p>Explore a wide range of vehicles, from classic models to the latest releases. Whether you're a car enthusiast or just looking for your next ride, we have something for everyone.</p>
         <p>Join us on a journey through the world of automobiles and find the perfect car that suits your style and needs.</p>
     </div>
-     <!-- Galería -->
+     <!-- Galery -->
         <section id="CarGallery">
             <div class="gallery-container">
                 <button class="car-card" data-info="Volkswagen Taos – A compact SUV with modern design, spacious interior, and advanced technology. Perfect for drivers seeking comfort and safety.">
@@ -55,7 +55,7 @@
 </section>
 
 
-<!-- Contacto -->
+<!-- Contact -->
 <section class="py-5 bg-light" id="contact">
     <div class="container">
         <div class="row align-items-center">
