--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -66,13 +66,13 @@
                 <h4>Contact Us</h4>
                 <form onsubmit="sendEmail(); return false;" class="mt-3">
                     <div class="mb-3">
-                        <input type="text" id="name" class="form-control" placeholder="Name">
+                        <input type="text" id="Subject" class="form-control" placeholder="Subject">
                     </div>
                     <div class="mb-3">
-                        <input type="email" id="email" class="form-control" placeholder="E-Mail">
+                        <input type="email" id="Commentary" class="form-control" placeholder="Commentary">
                     </div>
                     <div class="mb-3">
-                        <textarea id="message" class="form-control" placeholder="Write a massage" rows="5"></textarea>
+                        <textarea id="Message" class="form-control" placeholder="Write a massage" rows="5"></textarea>
                     </div>
                     <button type="submit" class="btn sm">Send</button>
                 </form>
