--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -8,7 +8,7 @@
 <head>
     <!--Fonts-->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=divice-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true">
     <title>AutomotiveMB</title>
 </head>
@@ -45,15 +45,17 @@
                 </button>
             <button class="car-card" data-info="Mercedes Benz B200 – The Mercedes-Benz B200 is a compact luxury MPV that blends practicality with premium features, ideal for urban families and tech-savvy drivers.">
                 <img src="~/images/car4.jpg" alt="Mercedes Benz B200">
+             </button>
             </div>
         </section>
-
+ 
     <!-- Popup -->
         <div id="popup" class="popup-hidden" aria-hidden="true">
         <div class="popup-content" role="dialog" aria-modal="true">
             <button class="close-btn" aria-label="Close">&times;</button>
             <div id="popup-text"></div>
         </div>
+
 </section>
 
 
