--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -135,7 +135,7 @@ p.Text {
 /* Logo */
 #Logo {
     max-width: 80%;
-    background: white; /* si querés que se vea con fondo */
+    background: white; 
     box-shadow: 0px 4px 6px rgba(0,0,0,0.2);
 }
 
