--- a/Pages/Clients/IndexClient.cshtml
+++ b/Pages/Clients/IndexClient.cshtml
@@ -18,10 +18,10 @@ else
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="~/css/site.css" asp-append-version="true">
-        <title>AutomotiveMB</title>
+        <title>Customer Storage</title>
     </head>
 
-    <body class="CBackground">
+  <body class="CBackground">
     <table class="table">
         <thead>
             <tr>
@@ -54,6 +54,6 @@ else
             }
         </tbody>
     </table>
-    </body>
-    </html>
+  </body>
+</html>
 }
