--- a/Pages/Vehicles/IndexVehicle.cshtml
+++ b/Pages/Vehicles/IndexVehicle.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Vehicles";
 }
 
-<a asp-page="CreateVehicle" class="btn btn-success mb-3" ab-3>Add vehicle</a>
+<a asp-page="ClientCreate" class="btn my-red-btn mb-3">Add vehicle</a>
 @if (Model.Vehicles.Count == 0)
 {
     <p>No vehicles are loaded</p>
