Update styles for vehicle storage page
Adjusted background properties in site.css for consistency.
Changed background images and sizes for .CBackground and .VBackground classes.
Updated .table class background color to solid white.

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -49,15 +49,15 @@ p.Text {
 }
 .CBackground {
     background-image: url('../Images/FondoCliente.jpg');
-    background-size: cover;
+    background-size:  contain;
    
 }
-.VBackground{
-    background-image: url('../Images/FondoVehículo.jpg');
-    background-size: cover;
+.VBackground {
+    background-image: url('../Images/otro.jpg');
+    background-size: contain;
 }
 .table{
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: white;
 }
 .my-red-btn {
     background-color: #e60000; 
