--- a/Pages/Clients/EditClient.cshtml
+++ b/Pages/Clients/EditClient.cshtml
@@ -39,7 +39,7 @@
     <div class="form-group">
         <label asp-for="Client.VehicleId">Looking for Vehicle (optional)</label>
         <select asp-for="Client.VehicleId" asp-items="Model.Vehicles" class="form-control">
-            <option value="">-- Abierto a opciones --</option>
+            <option value="">-- Open to options --</option>
         </select>
         <span asp-validation-for="Client.VehicleId" class="text-danger"></span>
     </div>
